k8s/user-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
        - name: user-service
          image: user-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8081
            - containerPort: 9091
          env:
            - name: DB_URL
              value: "jdbc:postgresql://postgres:5432/lastmile"
            - name: DB_USER
              value: "postgres"
            - name: DB_PASSWORD
              value: "postgres"
            - name: SERVER_PORT
              value: "8081"
            - name: GRPC_PORT
              value: "9091"
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
spec:
  selector:
    app: user-service
  ports:
    - name: http
      port: 8081
      targetPort: 8081
    - name: grpc
      port: 9091
      targetPort: 9091
